# contract-lifecycle-crew

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
k8s/: deployment.yaml  kustomization.yaml
src/contract_lifecycle/: __init__.py  api.py  config.py  main.py  models.py  streaming.py
src/contract_lifecycle/agents/: __init__.py  approval_router.py  compliance_officer.py  legal_analyst.py  negotiation_strategist.py  risk_assessor.py
src/contract_lifecycle/crews/: __init__.py  analysis_crew.py  approval_crew.py  negotiation_crew.py  tasks.py
src/contract_lifecycle/flow/: __init__.py  conditions.py  lifecycle_flow.py  state.py
src/contract_lifecycle/mock_data/: __init__.py  contracts.py  precedents.py  templates.py
src/contract_lifecycle/tools/: __init__.py  clause_tools.py  risk_tools.py  template_tools.py
tests/: conftest.py  test_api.py  test_crews.py
